`Added personal branding card to index.html,

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Branding Card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <div class="card">
+        <img src="image.JPG" alt="Profile Picture">
+        <h1>John Doe</h1>
+        <p class="title">Web Developer & Designer</p>
+        <p>Specializing in Frontend Development</p>
+        <div class="contact">
+            <p>Email: john.doe@example.com</p>
+            <p>Phone: +123 456 7890</p>
+            <p><a href="https://www.linkedin.com/in/johndoe" target="_blank">LinkedIn</a></p>
+        </div>
+    </div>
+
 </body>
 </html>
