`Update index.html and style.css`

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
     <div class="card">
         <img src="image.JPG" alt="Profile Picture">
-        <h1>John Doe</h1>
-        <p class="title">Web Developer & Designer</p>
+        <h1>Zidan Ardiansyah</h1>
+        <p class="title">Web Developer</p>
         <p>Specializing in Frontend Development</p>
         <div class="contact">
-            <p>Email: john.doe@example.com</p>
-            <p>Phone: +123 456 7890</p>
-            <p><a href="https://www.linkedin.com/in/johndoe" target="_blank">LinkedIn</a></p>
+            <p>📧 <strong>Address:</strong> cakleghid@gmail.com</p>
+            <p>📞 <strong>Phone:</strong> <span id="address"></span> +62 856 4038 9741</p>
+            <p>📍 <strong>Address:</strong></Address> Bandung, Jawa Barat<span id="address"></span></p>
+            <p>💰 <strong>Rate Per Hour:</strong> <span id="rate"></span>$5/hour</p>
         </div>
     </div>
-
 </body>
 </html>
