--- a/index.html
+++ b/index.html
@@ -3,22 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Branding Card</title>
+    <title>Personal Branding Website</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Menambahkan Font Awesome untuk ikon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-
-    <div class="card">
-        <img src="image.JPG" alt="Profile Picture">
-        <h1>Zidan Ardiansyah</h1>
-        <p class="title">Web Developer</p>
-        <p>Specializing in Frontend Development</p>
-        <div class="contact">
-            <p>📧 <strong>Address:</strong> cakleghid@gmail.com</p>
-            <p>📞 <strong>Phone:</strong> <span id="address"></span> +62 856 4038 9741</p>
-            <p>📍 <strong>Address:</strong></Address> Bandung, Jawa Barat<span id="address"></span></p>
-            <p>💰 <strong>Rate Per Hour:</strong> <span id="rate"></span>$5/hour</p>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="container">
+            <a href="#" class="logo">Zidan Ardiansyah</a>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
-    </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <h1>Welcome to My Personal Branding Website</h1>
+            <p>Web Developer | Specializing in Frontend Development</p>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <div class="card">
+                <div class="profile-image">
+                    <img src="https://via.placeholder.com/150" alt="Profile Picture">
+                </div>
+                <h3>Zidan Ardiansyah</h3>
+                <p class="title">Web Developer</p>
+                <p>Hi, I'm Zidan Ardiansyah, a passionate web developer with over 5 years of experience in creating beautiful and functional websites. I specialize in frontend development and love turning ideas into reality.</p>
+                <div class="contact">
+                    <p><i class="fas fa-envelope"></i> cakleghid@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +62 856 4038 9741</p>
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/johndoe" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/johndoe" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://twitter.com/johndoe" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <div class="container">
+            <h2>My Services</h2>
+            <div class="service-list">
+                <div class="service-item">
+                    <i class="fas fa-code"></i>
+                    <h3>Web Development</h3>
+                    <p>Building responsive and user-friendly websites using the latest technologies.</p>
+                </div>
+                <div class="service-item">
+                    <i class="fas fa-paint-brush"></i>
+                    <h3>Web Design</h3>
+                    <p>Creating modern and visually appealing designs tailored to your needs.</p>
+                </div>
+                <div class="service-item">
+                    <i class="fas fa-mobile-alt"></i>
+                    <h3>Mobile Optimization</h3>
+                    <p>Ensuring your website looks great on all devices, from desktops to smartphones.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <form class="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 Zidan Ardiansyah. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
