--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <h1>Welcome to My Personal Branding Website</h1>
-            <p>Web Developer | Specializing in Frontend Development</p>
+            <div class="typewriter-h1">
+                <h1>Welcome to My Personal Branding Website</h1>
+            </div>
+            <div class="typewriter">
+                <p>Web Developer | Specializing in Frontend Development</p>
+            </div>
         </div>
     </header>
 
@@ -35,7 +39,7 @@
             <h2>About Me</h2>
             <div class="card">
                 <div class="profile-image">
-                    <img src="https://via.placeholder.com/150" alt="Profile Picture">
+                    <img src="image.JPG" alt="Profile Picture">
                 </div>
                 <h3>Zidan Ardiansyah</h3>
                 <p class="title">Web Developer</p>
