--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <a href="#" class="logo">Zidan Ardiansyah</a>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About Me</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
