Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <p><i class="fas fa-phone"></i> +62 856 4038 9741</p>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/johndoe" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/johndoe" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://twitter.com/johndoe" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/ZidanArdi" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://api.whatsapp.com/send/?phone=6285640389741&text=Hello+I+Want+to+Order+Something!&type=phone_number&app_absent=0" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
