--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <a href="#" class="logo">Zidan Ardiansyah</a>
             <ul class="nav-links">
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#services">My Services</a></li>
+                <li><a href="#contact">Contact Me</a></li>
             </ul>
         </div>
     </nav>
@@ -34,7 +34,7 @@
     <header class="header">
         <div class="container">
             <div class="typewriter-h1">
-                <h1>Welcome to My Personal Branding Website</h1>
+                <h1>Welcome to my Website</h1>
             </div>
             <div class="typewriter">
                 <p>Web Developer | Specializing in Frontend Development</p>
