--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
+
+<script type="module" src="https://cdn.jsdelivr.net/gh/domyid/tracker@latest/index.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VC1KRLE93"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
