--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <h3>Zidan Ardiansyah</h3>
                 <p class="title">Web Developer</p>
-                <p>Hi, I'm Zidan Ardiansyah, a passionate web developer with over 5 years of experience in creating beautiful and functional websites. I specialize in frontend development and love turning ideas into reality.</p>
+                <p>Hi, I'm Zidan Ardiansyah, a passionate web developer with several experience in creating beautiful and functional websites. I specialize in frontend development and love turning ideas into reality.</p>
                 <div class="contact">
                     <p><i class="fas fa-envelope"></i> cakleghid@gmail.com</p>
                     <p><i class="fas fa-phone"></i> +62 856 4038 9741</p>
