--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="service-item">
                     <i class="fas fa-paint-brush"></i>
-                    <h3>Web Design</h3>
+                    <h3>Web Designer</h3>
                     <p>Creating modern and visually appealing designs tailored to your needs.</p>
                 </div>
                 <div class="service-item">
