--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p class="title">Web Developer</p>
                 <p>Hi, I'm Zidan Ardiansyah, a passionate web developer with several experience in creating beautiful and functional websites. I specialize in frontend development and love turning ideas into reality.</p>
                 <div class="contact">
-                    <p><i class="fas fa-envelope"></i> panjihadi6@gmail.com</p>
+                    <p><i class="fas fa-envelope"></i> cakleghid@gmail.com</p>
                     <p><i class="fas fa-phone"></i> +62 856 4038 9741</p>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/johndoe" target="_blank"><i class="fab fa-linkedin"></i></a>
